# open-super-whisper-v2

./: .gitignore  README.md  TODO.md  app.py  change.md  dependency.md  main.py  pyproject.toml  run_open_super_whisper.py  run_qt_mvc_demo.py  run_recorder_app.py  run_super_whisper.py  run_super_whisper_app.py  test_core.py  thread_management_proposal.md  todo.md
assets/: README.md  icon.icns
core/: __init__.py  audio_chunker.py  hotkeys.py  instructions.py  llm.py  llm_processor.py  processor.py  progress_tracker.py  recorder.py  transcriber.py  transcription_and_llm_processor.py
docs/: MANUAL.md  MANUAL_ja.md  README.md  README_ja.md  RELEASE.md  settings_sample_en.json  settings_sample_ja.json
gui/: __init__.py  gui_app.py  main.py
new_core/: README.md
old_core/: __init__.py  audio_chunker.py  instructions.py  llm_processor.py  progress_tracker.py  transcriber.py  transcription_and_llm_processor.py
old_gui/: __init__.py  gui_app.py
qt_mvc_demo/: __init__.py  main.py
recorder_app/: __init__.py  __main__.py  main.py
sample_settings/: settings_sample_ja.json
super_whisper_app/: __init__.py  main.py
tests/: README.md  test_audio_chunker.py  test_audio_recorder.py  test_hot_key_manager.py  test_instruction_manager.py  test_instruction_set.py  test_key_state_tracker.py  test_llm_model.py  test_llm_model_manager.py  test_llm_processor.py  test_pipeline_result.py  test_stt_llm_pipeline.py  test_stt_model.py  test_stt_model_manager.py  test_stt_processor.py
thread_management/: README.md  thread_manager.py
whisper_core/: __init__.py  hotkeys.py  (+2 more)
(+219 files in other folders)
