[project]
name = "open-super-whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "markdown>=3.8",
    "numpy>=2.2.5",
    "openai>=1.75.0",
    "pyinstaller>=6.13.0",
    "pynput>=1.8.1",
    "pyqt6>=6.9.0",
    "pyqt6-webengine>=6.9.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
]
